--- a/day1.html
+++ b/day1.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Day 1</h1>
+    <h1>Day 1: Saint Jean Pied de Port to Roncesvalles</h1>
     <h1>We haven't made it to this day yet!</h1>
     <h3>Keep checking in though...</h3>
     <p>We are almost there!</p>
